# gst-client-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  error.rs  gstd_types.rs  lib.rs
src/resources/: bus.rs  debug.rs  element.rs  pipeline.rs
