[package]
name = "gst-client"
version = "0.2.1"
description = "Provides bindings for the main functionalities of the GStreamer Daemon"
authors = ["Serhii Khalymon <serhii@fluxomnia.systems>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluxomnia-systems/gst-client"
documentation = "https://docs.rs/gst-client"
keywords = ["gstreamer", "gstd", "API", "client"]
categories = ["web-programming::http-client"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
allow-branch = ["master"]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
pre-release-replacements = [
    {file="README.md", search="v[0-9]+\\.[0-9]+\\.[0-9]+", replace="v{{version}}"},
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
url = { version = "2.1", features = ["serde"] }
[dependencies.derive_more]
version = "0.99"
features = ["display", "error", "from"]
default-features = false
[dependencies.reqwest]
version = "0.11"
features = ["default-tls", "json"]
default-features = false


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
